--- a/style.css
+++ b/style.css
@@ -1,6 +1,51 @@
+/* This is shared styling */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+}
+.btn-primary {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  background-color: rgb(246, 64, 64);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+}
+.btn-primary:hover {
+ cursor: pointer;
+ background-color: rgb(255, 0, 0);
+ box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+}
+/* This is header part styling */
+header {
+  background-color: rgba(229, 84, 115, 0.1);
+  height:100vh;
+}
+.header-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-bottom: 100px;
+}
+.header-text{
+    width:38%;
+}
+.header-headings {
+  color: #272727;
+  font-size: 50px;
+  font-weight: 800;
+}
+.header-info {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 30px;
+  padding: 20px 0;
+}
+.header-img {
+  width: 500px;
+  height: 600px;
 }
