--- a/style.css
+++ b/style.css
@@ -21,17 +21,19 @@
 }
 /* This is header part styling */
 header {
-  background-color: rgba(229, 84, 115, 0.1);
-  height:100vh;
+  background-color: rgba(229, 84, 200, 0.1);
+  height:auto;
+  margin-bottom: 100px ;
 }
 .header-container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding-bottom: 100px;
+  padding-top: 60px;
 }
 .header-text{
     width:38%;
+    padding-left: 50px;
 }
 .header-headings {
   color: #272727;
@@ -49,3 +51,4 @@ header {
   width: 500px;
   height: 600px;
 }
+/* This is section no one */
