--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 header {
   background-color: rgba(229, 84, 200, 0.1);
   height: auto;
-  margin-bottom:60px;
+  margin-bottom: 60px;
 }
 .header-container {
   display: flex;
@@ -51,7 +51,7 @@ header {
   width: 500px;
   height: 600px;
 }
-/* This is number one section */
+/* This is first section */
 /* Part one */
 .featured-text {
   text-align: center;
@@ -75,25 +75,25 @@ header {
   padding-bottom: 35px;
 }
 .flower-tree-container {
-  padding: 10px 140px 10px 140px;
+  padding: 10px 120px 10px 120px;
 }
 .flower-tree-1 {
   width: 340px;
-  height: 400px;
+  height: 380px;
   background-color: rgba(210, 127, 244, 0.5);
   padding: 70px 40px 0 40px;
   border-radius: 50% 50% 0 0;
 }
 .flower-tree-2 {
   width: 340px;
-  height: 400px;
+  height: 380px;
   background-color: rgba(104, 216, 231, 0.5);
   padding: 70px 40px 30px 40px;
   border-radius: 50% 50% 0 0;
 }
 .flower-tree-3 {
   width: 340px;
-  height: 400px;
+  height: 380px;
   background-color: rgba(145, 234, 118, 0.51);
   padding: 70px 40px 0 40px;
   border-radius: 50% 50% 0 0;
@@ -110,10 +110,10 @@ header {
 .service-container {
   display: flex;
   justify-content: space-evenly;
-  border-radius: 8px;
+  border-radius: 10px;
   background-color: rgba(128, 128, 128, 0.25);
   padding: 50px;
-  margin: 40px 12px;
+  margin: 40px 22px;
 }
 .service-type {
   width: 100%;
@@ -128,4 +128,31 @@ header {
   color: rgba(39, 39, 39, 0.8);
   font-size: 15px;
   font-weight: 600;
+}
+/* This is second section */
+.deal-container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  /* border-radius: 10px; */
+  background-color: rgba(229, 84, 200, 0.1);
+  padding: 50px ;
+}
+.hot-deal{
+  text-align: center;
+}
+.deal-heading{
+color: #272727;
+font-size: 40px;
+font-weight: 800;
+}
+.red-font{
+ color: #E55473;
+}
+.deal-para{
+color: rgba(39, 39, 39, 0.60);
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+padding: 10px 0 20px 0;
 }
