--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ header {
   font-weight: 700;
   text-decoration-line: underline;
 }
-/* part two */
+/* Part two */
 .service-container {
   display: flex;
   justify-content: space-evenly;
@@ -143,25 +143,13 @@ header {
 .hot-deal{
   text-align: center;
 }
-.deal-heading{
-color: #272727;
-font-size: 40px;
-font-weight: 800;
-}
 .red-font{
  color: #E55473;
 }
-.deal-para{
-color: rgba(39, 39, 39, 0.60);
-font-size: 18px;
-font-weight: 400;
-line-height: 30px;
-padding: 10px 0 20px 0;
-} 
 /* This is third section */
-/* first part  */
+/* Part one  */
 .social-network-container{
-  margin-top: 30px;
+  margin: 30px 0 50px 0;
 }
 
 .instagram{
@@ -175,3 +163,25 @@ padding: 10px 0 20px 0;
   height: 300px;
   margin: 8px;
 }
+/* Part two */
+.subscribe-container{
+  margin: 0 145px;
+}
+.sub-container{
+  background-image: url(./assets/Rectangle\ 9.png);
+  height: 60vh;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+/* .sub-text{
+  width: 50%;
+  margin: 0 auto;
+
+} */
+/* .test{
+  display: flex;
+justify-content: space-between;
+} */
